--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,11 +1,14 @@
 <% @title = "TextMate 2 - Projects - Ticketee" %>
-<h2><%= @project.name %></h2>
-<%= link_to "Edit Project", edit_project_path(@project) %>
-<%= link_to "Delete Project",
-     project_path(@project),
-     :method => :delete,
-     :confirm => "Are you sure you want to delete this project?" %>
-<%= link_to "New Ticket", new_project_ticket_path(@project) %>
+<div id='project'>
+  <h2><%= @project.name %></h2>
+  <span id='author'>Created by <%= @project.user.email %></span>
+  <%= link_to "Edit Project", edit_project_path(@project) %>
+  <%= link_to "Delete Project",
+              project_path(@project),
+              :method => :delete,
+              :confirm => "Are you sure you want to delete this project?" %>
+  <%= link_to "New Ticket", new_project_ticket_path(@project) %>
+</div>
 
 <ul id='tickets'>
   <% @project.tickets.each do |ticket| %>
